--- a/RealtimeMeasurement.Web/bin/RealtimeMeasurement.Web.dll.config
+++ b/RealtimeMeasurement.Web/bin/RealtimeMeasurement.Web.dll.config
@@ -44,5 +44,10 @@
     <modules runAllManagedModulesForAllRequests="true">
       <add name="RequestMeasure" type="RealtimeMeasurement.Infrastructure.HttpModule.RequestMeasure, RealtimeMeasurement.Infrastructure" />
       </modules>
-  </system.webServer>
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
   </configuration>
