--- a/RealtimeMeasurement.Infrastructure/RealtimeMeasurement.Infrastructure.csproj
+++ b/RealtimeMeasurement.Infrastructure/RealtimeMeasurement.Infrastructure.csproj
@@ -88,8 +88,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApplicationMetrics.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="Metrics\IWebsiteMetric.cs" />
+    <Compile Include="Metrics\WebsiteMetric.cs" />
     <Compile Include="HttpModule\RequestMeasure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reporter\InfluxDbReporter.cs" />
